--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT = 5000
-MYSQL_HOST = localhost
+MYSQL_HOST = roundhouse.proxy.rlwy.net 
 MYSQL_USER = root
-MYSQL_PASSWORD =
-MYSQL_DB = cond_siena
+MYSQL_PORT = 43244
+MYSQL_PASSWORD = slKCIsHIbZrxxGOZnUhufWvrnjfbDgpo
+MYSQL_DB = railway
